--- a/package.json
+++ b/package.json
@@ -3,9 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "connected-react-router": "^5.0.1",
+    "iframe-resizer": "^3.6.3",
+    "node-sass": "^4.10.0",
+    "query-string": "5",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-draggable": "^3.0.5",
+    "react-iframe-resizer-super": "^0.2.2",
+    "react-router": "^4.3.1",
+    "react-router-config": "^4.4.0-beta.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2",
+    "react-youtube": "^7.8.0",
+    "simple-youtube-api": "^5.1.1",
+    "slick-carousel": "^1.8.1",
+    "youtube-player": "^5.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
