--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.10.0",
     "query-string": "5",
     "react": "^16.7.0-alpha.2",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.7.0-alpha.2",
     "react-draggable": "^3.0.5",
     "react-iframe-resizer-super": "^0.2.2",
