--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "iframe-resizer": "^3.6.3",
     "node-sass": "^4.10.0",
     "query-string": "5",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.7.0-alpha.2",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.7.0-alpha.2",
