--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-draggable": "^3.0.5",
     "react-iframe-resizer-super": "^0.2.2",
+    "react-rnd": "^9.0.4",
     "react-router": "^4.3.1",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
