--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "connected-react-router": "^5.0.1",
     "iframe-resizer": "^3.6.3",
     "node-sass": "^4.10.0",
     "query-string": "5",
+    "ramda": "^0.26.0",
     "rc-tooltip": "^3.7.3",
     "react": "^16.7.0-alpha.2",
     "react-burger-menu": "^2.5.4",
@@ -20,6 +22,7 @@
     "react-scripts": "2.1.1",
     "react-slick": "^0.23.2",
     "react-youtube": "^7.8.0",
+    "reactstrap": "^6.5.0",
     "simple-youtube-api": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "youtube-player": "^5.5.1"
